--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,42 @@
+appdirs==1.4.4
 attrs==20.3.0
 Automat==20.2.0
 certifi==2020.12.5
+cfgv==3.2.0
 chardet==4.0.0
 comet-ml==3.9.0
 configobj==5.0.6
 constantly==15.1.0
+distlib==0.3.1
 dulwich==0.20.21
 everett==1.0.3
+filelock==3.0.12
 future==0.18.2
 hyperlink==21.0.0
+identify==2.2.4
 idna==2.10
 importlib-metadata==4.0.1
 incremental==21.3.0
 jsonschema==3.2.0
 lxml==4.6.3
+nodeenv==1.6.0
 numpy==1.17.2
 nvidia-ml-py3==7.352.0
 pandas==0.25.1
+pre-commit==2.12.1
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 requests-toolbelt==0.9.1
 six==1.15.0
+toml==0.10.2
 torch==1.5.0+cu101
 Twisted==21.2.0
 typing-extensions==3.7.4.3
 urllib3==1.26.4
+virtualenv==20.4.4
 websocket-client==0.58.0
 wrapt==1.12.1
 wurlitzer==2.1.0
