added LightGCN evaluation and submission prodedures, removed original LightGCN
Co-authored-by: alopardo <alopardo@student.ethz.ch>

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ pyvenv.cfg
 baselines/.DS_STORE
 **/.DS_STORE
 .idea/
+checkpoints/
+submissions/
+wandb/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
