--- a/requirements.txt
+++ b/requirements.txt
@@ -52,5 +52,54 @@ wrapt==1.12.1
 wurlitzer==2.1.0
 zipp==3.4.1
 zope.interface==5.4.0
-torch==1.5.0+cu101
+torch>=1.5.0+cu101
 git+https://github.com/gbolmier/funk-svd
+
+pip~=21.1.3
+setuptools~=57.0.0
+wheel~=0.36.2
+pyzmq~=22.1.0
+pexpect~=4.8.0
+tornado~=6.1
+parso~=0.8.2
+jedi~=0.18.0
+scipy~=1.7.0
+sklearn~=0.0
+scikit-learn~=0.24.2
+tqdm~=4.61.1
+QtPy~=1.9.0
+ipywidgets~=7.6.3
+ipython~=7.25.0
+notebook~=6.4.0
+numba~=0.53.1
+llvmlite~=0.36.0
+cffi~=1.14.5
+Pygments~=2.9.0
+Jinja2~=3.0.1
+ipykernel~=5.5.5
+nbformat~=5.1.3
+webencodings~=0.5.1
+packaging~=20.9
+bleach~=3.3.0
+MarkupSafe~=2.0.1
+joblib~=1.0.1
+traitlets~=5.0.5
+testpath~=0.5.0
+decorator~=5.0.9
+backcall~=0.2.0
+pickleshare~=0.7.5
+wcwidth~=0.2.5
+ptyprocess~=0.7.0
+threadpoolctl~=2.1.0
+nbclient~=0.5.3
+nbconvert~=6.1.0
+Send2Trash~=1.7.1
+terminado~=0.10.1
+defusedxml~=0.7.1
+pandocfilters~=1.4.3
+mistune~=0.8.4
+entrypoints~=0.3
+pyparsing~=2.4.7
+pycparser~=2.20
+qtconsole~=5.1.0
+pywFM~=0.9.0
