add pretraining in run_alter.py
Co-Authored-By: Luca Malagutti <1375207+LucaMalagutti@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,5 @@ DeepRec++/data/embs/
 baselines/DeepRec/data/submission/CIL_data.submission
 DeepRec++/data/submission/CIL_data.submission
 DeepRec++/sweep.yaml
+DeepRec++/out.json
+DeepRec++/data/embs.zip
