--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ include_trailing_comma=true
 known_comet=comet_ml
 
 [flake8]
-ignore = E203, E266, E501, W503, F403, F401, E402
+ignore = E203, E266, E501, W503, F403, F401, F405, E402
 max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
